--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@thirdweb-dev/react": "^4.6.24",
+    "@thirdweb-dev/sdk": "^4.0.85",
+    "again": "^0.0.1",
+    "ethers": "^5.7.2",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
